--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
 
     <section class="sequencia-de-topicos">
 
-        <nav class="topico">
+        <nav class="topico-1">
           <img src="/images/icon-access-anywhere.svg" alt="anywhere">
           <h3>Access your files, anywhere</h3>
           <p class="texto-do-topico">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
         </nav>
 
-        <nav class="topico">
+        <nav class="topico-2">
           <img src="/images/icon-security.svg" alt="security">
           <h3> Security you can trust</h3>
           <p class="texto-do-topico">factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
         </nav>
 
-        <nav class="topico">
+        <nav class="topico-3">
           <img src="/images/icon-collaboration.svg" alt="collaboration">
           <h3>Real-time collaboration</h3>
           <p class="texto-do-topico">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
         </nav>
 
-        <nav class="topico">
+        <nav class="topico-4">
           <img src="/images/icon-any-file.svg" alt="access">
           <h3>Store any type of file</h3>
           <p class="texto-do-topico">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
@@ -82,13 +82,14 @@
 
     </section>
 
-    <section>
+    <section class="imagem-da-informacao">
 
       <img src="/images/illustration-stay-productive.png" alt="">
 
       <nav>
         <h2>Stay productive, wherever you are</h2>
         <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+        
         <p>Securely share files and folders with friends, family and colleagues for live collaboration. No attachments required.</p>
         <a href="#">See how Fylo works <img src="/images/icon-arrow.svg" alt="seta"></a>
       </nav>
@@ -182,18 +183,7 @@
       </footer>
     </section>
 
-    
-
-  
   </header>
- 
-
-
-
-
-
-
-
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
