Estilizando a quarta sessao, nao completa ainda falta acerta algumas coisas

--- a/index.html
+++ b/index.html
@@ -57,41 +57,41 @@
     <section class="sequencia-de-topicos">
 
         <nav class="topico-1">
-          <img src="/images/icon-access-anywhere.svg" alt="anywhere">
+          <img class="img-topico-1" src="/images/icon-access-anywhere.svg" alt="anywhere">
           <h3>Access your files, anywhere</h3>
           <p class="texto-do-topico">The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.</p>
         </nav>
 
         <nav class="topico-2">
-          <img src="/images/icon-security.svg" alt="security">
+          <img class="img-topico-2" src="/images/icon-security.svg" alt="security">
           <h3> Security you can trust</h3>
-          <p class="texto-do-topico">factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
+          <p class="texto-do-topico">2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
         </nav>
 
         <nav class="topico-3">
-          <img src="/images/icon-collaboration.svg" alt="collaboration">
+          <img class="img-topico-3" src="/images/icon-collaboration.svg" alt="collaboration">
           <h3>Real-time collaboration</h3>
           <p class="texto-do-topico">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
         </nav>
 
         <nav class="topico-4">
-          <img src="/images/icon-any-file.svg" alt="access">
+          <img class="img-topico-4" src="/images/icon-any-file.svg" alt="access">
           <h3>Store any type of file</h3>
           <p class="texto-do-topico">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.</p>
         </nav>
 
     </section>
 
-    <section class="imagem-da-informacao">
+    <section class="imagem-com-informacao">
 
       <img src="/images/illustration-stay-productive.png" alt="">
 
       <nav>
-        <h2>Stay productive, wherever you are</h2>
-        <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
+        <h2 class="texto-informativo titulo-informativo">Stay productive, wherever you are</h2>
+        <p class="texto-informativo paragrafo-informativo-1">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
         
-        <p>Securely share files and folders with friends, family and colleagues for live collaboration. No attachments required.</p>
-        <a href="#">See how Fylo works <img src="/images/icon-arrow.svg" alt="seta"></a>
+        <p class="texto-informativo paragrafo-informativo-2">Securely share files and folders with friends, family and colleagues for live collaboration. No attachments required.</p>
+        <a class="texto-informativo link-do-informativo" href="#">See how Fylo works</a>
       </nav>
 
     </section>
