--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <header>
+  
     <section class="menu">
 
       <nav class="logo"><img src="/images/logo.svg" alt=""></nav>
@@ -43,11 +43,12 @@
 
         <main>
 
-          <img src="/images/illustration-intro.png" alt="Imagem de um envelope">
+          <img class="main-1" src="/images/illustration-intro.png" alt="Imagem de um envelope" class="img-principal-main">
 
-          <h2 class="titulo-paragrafo-1">All your files in one secure location, accessible anywhere.</h2>
+          
+          <h2 class="texto-paragrafo-1">All your files in one secure location, accessible anywhere.</h2>
 
-          <p class="texto-paragrafo-1 centralizado">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
+          <p class="texto-paragrafo-1">Fylo stores all your most important files in one secure location. Access them wherever you need, share and collaborate with friends family, and co-workers.</p>
           <button class="bnt">Get Started</button>
         
         </main>
@@ -203,8 +204,6 @@
 
       </footer>
    
-
-  </header>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
